compiler/fir/analysis-tests/testData/resolve/extendedCheckers/RedundantCallOfConversionMethod/int.kt
// WITH_STDLIB
konst foo = 1.<!REDUNDANT_CALL_OF_CONVERSION_METHOD!>toInt()<!>